# AdaptationStudy

./: .gitignore  README.md
ARGoS_simulation/behaviours/: CMakeLists.txt  agentCDCIlocal.h  agentCDCIlocal_ModelB.c  agentCDCIlocal_compare.c
ARGoS_simulation/data_generation_scripts/: runexps_global.sh  runexps_local.sh
ARGoS_simulation/experiment/: kilobot_ark_template_scenarioA_withVisualization_1m.argos  kilobot_ark_template_scenarioA_withVisualization_1m_global.argos
ARGoS_simulation/loop_functions/: CMakeLists.txt  ark.cpp  ark.h
ARK_Codes/src/: bestofN.pro  bestofNEnv.cpp  bestofNEnv.h  bestofNExp.cpp  bestofNExp.h  global.h  kilobotexperiment.h
ARK_Codes/src_global/: bestofNEnv.cpp  bestofNEnv.h  bestofNExp.cpp  bestofNExp.h  kilobotexperiment.h
Kilobot_Codes/local_communication/: localcomm_compare.c  localcomm_forget.c
MultiAgent_simulation/configuration/: compare_rule.config  resample_rule.config
MultiAgent_simulation/data_generation_scripts/: Fig3_compare.sh  Fig3_resample.sh  Fig7_compare.sh  Fig7_resample.sh  Fig_S1_compare.sh  Fig_S1_resample.sh  Fig_S2_compare.sh  Fig_S2_resample.sh  Fig_S3_compare.sh  Fig_S3_resample.sh  Fig_S4_compare.sh  Fig_S4_resample.sh  Fig_S5_compare.sh  Fig_S5_resample.sh  configuration.template.config
MultiAgent_simulation/src/: agent.py  deMaMAS.py  errorController.py  msg.py  parser.py  totem.py
ODE_Analysis/: Bifurcation_Point.ipynb
